# Attestra

./: .gitignore  CHANGELOG.md  README.md  attestra_audit.py  attestra_helix.py  attestra_pipeline.py  cli.py  pyproject.toml
.pgf/: DESIGN-Attestra.md  DESIGN-AttestraPacks.md  WORKPLAN-Attestra-Roadmap.md  WORKPLAN-Attestra.md  status-Attestra-Roadmap.json  status-Attestra.json
.pgxf/: INDEX-Attestra.json
attestra_core/: __init__.py  attestation.py  attestation_ledger.py  determinism.py  fingerprint.py  gate_runtime.py  ledger.py  packet.py  provenance.py  schema.py  verdict.py
attestra_packs/: __init__.py  _base.py  action_governance.py  afferent_core.py  afferent_interrupt.py  authority_arbiter.py  context_boundary.py  cover_gate.py  custody_relay.py  delegation.py  drift_isolator.py  gencert.py  graph_quarantine.py  handback.py  hook_circuit.py  loader.py  method_bond.py  policy_drift.py  pqc_mesh.py  proof_escrow.py  reprodossier.py  reserveflow.py  settle_mesh.py  signal_mesh.py  slot_gate.py  slot_settle_gate.py  sov_mesh.py  spend_boundary.py  spend_mesh.py  veto_escrow.py  withheld_action.py
docs/: ARCHITECTURE.md  DETERMINISM.md  PACK-CONTRACT.md
schemas/: attestation.schema.json  ledger.schema.json  manifest.schema.json  packet-action.schema.json  packet-afferentcore.schema.json  packet-afferentinterrupt.schema.json  packet-authorityarbiter.schema.json  packet-clearing.schema.json  packet-context.schema.json  packet-covergate.schema.json  packet-custody.schema.json  packet-delegation.schema.json  packet-driftisolator.schema.json  packet.schema.json  (+19 more)
(+26 files in other folders)
